# FileToClipboard

./: .gitignore  CMakeLists.txt  README.md
app/cpp/include/: ClipboardManager.hpp  WaylandClipboardManager.hpp  X11ClipboardManager.hpp
app/cpp/src/: WaylandClipboardManager.cpp  X11ClipboardManager.cpp  main.cpp
sh/: build.sh  run.sh
